--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,24 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-/******************* HEADER SECTION *********************/
-header {
+.header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-header h1 {
+.header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-header h1 .seo {
+.header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+.header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,16 +32,15 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+.header div ul {
     list-style-type: none;
 }
 
-header div ul li {
+.header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/******************* RULES SECTION *********************/
 a {
     color: #ffffff;
     text-decoration: none;
@@ -77,7 +75,6 @@ p {
     margin-left: 20px;
 }
 
-/******************* SIDEBAR SECTION *********************/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -137,7 +134,6 @@ p {
     max-width: 150px;
 }
 
-/******************* MAIN SECTION *********************/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -192,7 +188,6 @@ p {
     font-size: 36px;
 }
 
-/******************* FOOTER SECTION *********************/
 .footer {
     padding: 30px;
     clear: both;
